Initial commit: A demonstration project showcasing JSON-RPC 2.0 communication between two Sinatra applications

--- a/.submoduler.ini
+++ b/.submoduler.ini
@@ -1,20 +1,18 @@
-[submoduler]
+[project]
 name = sinatra-json-rpc-demo
-description = A demonstration of JSON-RPC 2.0 communication between two Sinatra applications
+description = A demonstration project showcasing JSON-RPC 2.0 communication between two Sinatra applications
 version = 1.0.0
 type = example
-category = demo
+category = web-framework
+tags = sinatra, json-rpc, ruby, web-api, demo
 
 [git]
-remote_url = 
+remote_url = https://github.com/magenticmarketactualskill/sinatra-json-rpc-demo.git
 branch = main
 
 [dependencies]
-ruby_version = ~> 3.0
-sinatra = ~> 4.0
-json = ~> 2.6
-rackup = ~> 2.1
-puma = ~> 6.0
+ruby_version = >= 3.0
+bundler = true
 
 [scripts]
 install = ./install_dependencies.sh
@@ -25,5 +23,24 @@ test = ./test_demo.sh
 
 [documentation]
 readme = README.md
-examples = true
-api_docs = false
+project_structure = PROJECT_STRUCTURE.md
+main_docs = README.md, PROJECT_STRUCTURE.md
+
+[features]
+json_rpc_2_0 = true
+sinatra_framework = true
+client_server_architecture = true
+web_interface = true
+error_handling = true
+logging = true
+parameter_validation = true
+
+[endpoints]
+server_port = 4567
+client_port = 4568
+jsonrpc_endpoint = /jsonrpc
+
+[examples]
+calculator_rpc = Calculator operations with numeric parameters
+string_manipulation = String processing with text parameters
+data_storage = Complex object handling and storage simulation
